@@ -1,0 +1,41 @@
+[manageiq-15-oparin]
+name=ManageIQ 15 (Oparin) Release - $basearch
+baseurl=https://rpm.manageiq.org/release/15-oparin/el$releasever/$basearch
+enabled=1
+gpgcheck=0
+gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-MANAGEIQ
+
+[manageiq-15-oparin-noarch]
+name=ManageIQ 15 (Oparin) Release - noarch
+baseurl=https://rpm.manageiq.org/release/15-oparin/el$releasever/noarch
+enabled=1
+gpgcheck=0
+gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-MANAGEIQ
+
+[manageiq-15-oparin-source]
+name=ManageIQ 15 (Oparin) Release - source
+baseurl=https://rpm.manageiq.org/release/15-oparin/el$releasever/src
+enabled=0
+gpgcheck=0
+gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-MANAGEIQ
+
+[manageiq-15-oparin-nightly]
+name=ManageIQ 15 (Oparin) Nightly - $basearch
+baseurl=https://rpm.manageiq.org/release/15-oparin-nightly/el$releasever/$basearch
+enabled=0
+gpgcheck=0
+gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-MANAGEIQ
+
+[manageiq-15-oparin-nightly-noarch]
+name=ManageIQ 15 (Oparin) Nightly - noarch
+baseurl=https://rpm.manageiq.org/release/15-oparin-nightly/el$releasever/noarch
+enabled=0
+gpgcheck=0
+gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-MANAGEIQ
+
+[manageiq-15-oparin-nightly-source]
+name=ManageIQ 15 (Oparin) Nightly - source
+baseurl=https://rpm.manageiq.org/release/15-oparin-nightly/el$releasever/src
+enabled=0
+gpgcheck=0
+gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-MANAGEIQ
