@@ -1,4 +1,7 @@
 %changelog
+* Mon Feb 14 2022 Jason Frey <fryguy9@gmail.com> - 15.0.0-1
+- Initial build of manageiq-release for Oparin.
+
 * Tue Aug 31 2021 Jason Frey <fryguy9@gmail.com> - 14.0.0-1
 - Initial build of manageiq-release for Najdorf
 
